--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,13 @@
         "friendsofphp/php-cs-fixer": "^3.13",
         "phpstan/phpstan": "^1.9"
     },
+    {
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.0"
+        }
+    }
+},
     "autoload": {
         "psr-4": {
             "Netflie\\WhatsAppCloudApi\\": "src"
